<resources>
    <string name="app_name">KaminoPlanet</string>
    <string name="tab_label1">Planet Info</string>
    <string name="tab_label2">Residents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rotation_period">ROTATION PERIOD</string>
    <string name="orbital_period">ORBITAL PERIOD</string>
    <string name="diameter">DIAMETER</string>
    <string name="climate">CLIMATE</string>
    <string name="gravity">GRAVITY</string>
    <string name="terrain">TERRAIN</string>
    <string name="surface_water">SURFACE WATER</string>
    <string name="population">POPULATION</string>
    <string name="like_planet">Like this planet</string>
    <string name="resident_list">Like this planet</string>
    <string name="height">Height:</string>
    <string name="mass">Mass:</string>
    <string name="hair_color">Hair Color:</string>
    <string name="eye_color">Eye Color:</string>
    <string name="gender">Gender:</string>
    <string name="birth_date">Birth year:</string>
    <string name="name">Name:</string>
</resources>
